# wordle

./: .gitignore  README.md  Word.py  requirements.txt  setup.cfg  setup.py  word_dump  wordle.py
src/: DataStorage.py  Feedback.py  Word.py  Wordle.py  main.py  wordle.py
