[metadata]
name = wordle
description = code to solve wordle
author = Utkarsh Jain
license = MIT
license_file = LICENSE
platforms = ["Linux", "Mac OS-X", "Unix"]
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = .
install_requires = enchant >= 3
python_requires = >=3.7
package_dir = src
zip_safe = False
