[metadata]
name = wordle
description = code to solve wordle
author = Utkarsh Jain
license = MIT
version = 1.0.4
license_file = LICENSE
platforms = ["Linux", "Mac OS-X", "Unix"]
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = .
install_requires = pyspellchecker >= 0.6
python_requires = >=3.6
package_dir = =src
zip_safe = False
